--- a/knjiga.css
+++ b/knjiga.css
@@ -3,6 +3,7 @@
 }
 body {
   margin: auto;
+  font-display: swap;
 }
     /*PRVA SEKCIJA: Početna
 ------------------------------------------------------------ */
