--- a/knjiga.css
+++ b/knjiga.css
@@ -8,7 +8,7 @@ body {
     /*PRVA SEKCIJA: Početna
 ------------------------------------------------------------ */
 .mimaarbid-naslovna {
-  background-image: url('slike/pozadina.png');
+  background-image: url('slike/pozadina.jpg');
   background-size: cover;
   height: 49.2vw;
   display: flex;
