--- a/knjiga.css
+++ b/knjiga.css
@@ -3,7 +3,7 @@
 }
 body {
   margin: auto;
-  font-display: swap;
+  font-display: optional;
 }
     /*PRVA SEKCIJA: Početna
 ------------------------------------------------------------ */
