--- a/responsive.css
+++ b/responsive.css
@@ -469,7 +469,7 @@
     margin-top: -14%;
   }
   .kontakt-imejl p {
-    font-size: 1.1em;
+    font-size: 1.15em;
   }
   #facebook {
     flex-basis: 15%;
@@ -772,8 +772,11 @@
   #mimaarbid-text {
     margin-left: 0%;
   }
+  #pismo {
+    margin-left: 2%;
+  }
   .kontakt-imejl {
-    font-size: 5.1vw;
+    font-size: 5.3vw;
   }
   #facebook {
     margin-left: 6%;
