--- a/responsive.css
+++ b/responsive.css
@@ -160,13 +160,19 @@
     font-size: 1.3em;
   }
   /* KNJIGE */
-  .knjige > p {
-    font-size: 3.6vw;
-    margin-left: 9%;
+  #belong {
+    font-size: 3.9vw;
+    margin-left: 7%;
   }
-  .knjige-izdanja {
+  .knjige-izdanja  {
     margin-left: 2%;
-    font-size: 2.8vw;
+    font-size: 3vw;
+  }
+  .amazon {
+    width: 20.3%;
+    font-size: 1.8vw;
+    top: 23%;
+    left: 23.2%;
   }
   /* ASIDE: Mima-lično */
   .mima-lično {
@@ -230,6 +236,7 @@
   #facebook {
     font-size: 3em;
   }
+
 }
 
 /* VEĆI MOBILNI (max-width: 767px) */
@@ -407,20 +414,27 @@
     margin-bottom: 0%;
   }
   /* KNJIGE */
-  .knjige > p {
+  #belong {
     margin-left: 11%;
-    font-size: 2.2em;
+    font-size: 1.6em;
     margin-bottom: 2.3%;
   }
   .knjige-izdanja {
-    font-size: 1.3em;
+    font-size: 1.2em;
     margin-left: 8%;
   }
   .knjige-izdanja p {
-    font-size: 1.3em;
+    font-size: 1em;
+    letter-spacing: 1px;
   }
   .knjige-izdanja p:last-of-type {
     margin-top: -2%;
+  }
+  .amazon {
+    width: 34%;
+    left: 28%;
+    top: 7%;
+    font-size: 0.9em;
   }
   /* ASIDE: Mima-lično */
   .mima-text {
@@ -514,6 +528,10 @@
   }
   .slika-text p {
     font-size: 1.35em;
+  }
+  /* KNJIGE */
+  .amazon {
+    top: 5%;
   }
   /* ASIDE: Mima-lično */
   .mima-lično {
@@ -621,7 +639,7 @@
     font-size: 1.1em;
   }
   /* KNJIGE */
-  .knjige > p {
+  #belong {
     font-size: 1.9em;
   }
   .knjige-izdanja {
@@ -629,6 +647,11 @@
   }
   .knjige-izdanja p {
     font-size: 1.2em;
+  }
+  .amazon {
+    width: 36%;
+    left: 35%;
+    top: 9%;
   }
   /*FOOTER MOBILNI*/
   footer {
@@ -684,6 +707,13 @@
   /* ASIDE: slika-planina (text) */
   .slika-text p {
     width: 95%;
+  }
+  /*KNJIGE*/
+  .amazon {
+    left: 33%;
+    font-size:1.07em;
+    width: 39%;
+    top: 7%;
   }
   /* ASIDE: Mima-lično */
   .mima-lično {
@@ -758,11 +788,16 @@
     margin-bottom: -2%;
   }
   /* KNJIGE */
-  .knjige > p {
+  #belong {
     font-size: 7vw;
   }
   .knjige-izdanja {
-    font-size: 4.9vw;
+    font-size: 4.5vw;
+  }
+  .amazon {
+    width: 44%;
+    top: 9%;
+    font-size: 3.9vw;
   }
   /* ASIDE: Mima-lično */
   #mima-potpis {
@@ -810,6 +845,10 @@
   .slika-text p {
     font-size: 5.3vw;
   }
+  /* KNJIGE */
+  .amazon {
+    width: 43%;
+  }
    /* ASIDE: Mima-lično */
   .mima-lično img:first-of-type {
     margin-bottom: -24%;
@@ -849,5 +888,9 @@
   .navigation-bar li a {
     font-size: 0.6em;
     padding: 0 8px;
+  }
+  /* KNJIGE */
+  .amazon {
+    width: 47%;
   }
 }
