--- a/knjiga.css
+++ b/knjiga.css
@@ -13,6 +13,9 @@ body {
   height: 49.2vw;
   display: flex;
 }
+header {
+  display: none;
+}
 .navigation-bar {
   display: flex;
   justify-content: flex-end;
