--- a/knjiga.css
+++ b/knjiga.css
@@ -213,6 +213,7 @@ cursor: default;
   margin-top: -3.5%;
   margin-left: 1%;
   font-size: 2.5vw;
+  font-family:Arial, Helvetica, sans-serif;
 }
 .amazon {
   width: 18%;
