--- a/knjiga.css
+++ b/knjiga.css
@@ -276,6 +276,7 @@ ASIDE: Mima-lično
 }
 #mima-potpis {
   font-family: "Sacramento", cursive;
+  font-display: swap;
   font-size: 3.2vw;
   text-align: right;
   margin-left: -3.9%;
@@ -326,9 +327,11 @@ footer {
   font-family: "Sacramento", cursive;
   font-size: 4.5vw;
   font-weight: lighter;
+  font-display: swap;
 }
 #pismo {
   position: relative;
+  font-display: swap;
   font-size: 5.7vw;
   top: -4%;
   left: -2%;
