--- a/responsive.css
+++ b/responsive.css
@@ -250,7 +250,7 @@
 @media screen and (max-width: 767px) {
   /* PRVA SEKCIJA */
   .mimaarbid-naslovna {
-    background-image: url('slike/mobilni.jpg');
+    background-image: url('slike/mobilniW.webp');
     background-size: cover;
     height: 92.6vw;
     display: flex;
@@ -380,7 +380,6 @@
     margin-left: -12%;
   }
 }
-
 /* SREDNJI MOBILNI (max-width: 670px) */
   
 @media screen and (max-width: 670px) {
