--- a/responsive.css
+++ b/responsive.css
@@ -250,7 +250,7 @@
 @media screen and (max-width: 767px) {
   /* PRVA SEKCIJA */
   .mimaarbid-naslovna {
-    background-image: url('slike/mobilniW.webp');
+    background-image: url('slike/mobilni.jpg');
     background-size: cover;
     height: 92.6vw;
     display: flex;
