--- a/knjiga.css
+++ b/knjiga.css
@@ -12,7 +12,7 @@ body {
     /*PRVA SEKCIJA: Početna
 ------------------------------------------------------------ */
 .mimaarbid-naslovna {
-  background-image: url('slike/pozadina.jpg');
+  background-image: url('slike/pozadinaW.webp');
   background-size: cover;
   height: 49.2vw;
   display: flex;
@@ -44,7 +44,7 @@ DRUGA SEKCIJA: Biografija
   text-align: center;
   display: flex;
   align-items: flex-start;
-  background-image: url('slike/mima-prazno.png');
+  background-image: url('slike/mima-praznoW.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: 102% 30px;
