--- a/knjiga.css
+++ b/knjiga.css
@@ -44,7 +44,7 @@ DRUGA SEKCIJA: Biografija
   text-align: center;
   display: flex;
   align-items: flex-start;
-  background-image: url('slike/mima-praznoW.png');
+  background-image: url('slike/mima-praznoW.webp');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: 102% 30px;
